--- a/index.html
+++ b/index.html
@@ -10,29 +10,44 @@
 
   <body>
     <div class="container">
-    <h3>Welcome to Wikipedia,</h3>
-      <ul>
-        <li>Arts</li>
-        <li>Biography</li>
-        <li>Geography</li>
-        <li>History</li>
-        <li>Mathematics</li>
-        <li>Science</li>
-        <li>Society</li>
-        <li>Technology</li>
-        <li>All Portals</li>
-      </ul>
+
+      <div class="introbox">
+        <h3>Welcome to Wikipedia,</h3>
+          <ul>
+            <li>Arts</li>
+            <li>Biography</li>
+            <li>Geography</li>
+            <li>History</li>
+            <li>Mathematics</li>
+            <li>Science</li>
+            <li>Society</li>
+            <li>Technology</li>
+            <li>All Portals</li>
+          </ul>
+      </div>
 
   <div class="row-fluid">
         <div class="span8">
           <div class="span12"><h4>From today's featured article</h4></div>
-          <p>British scientists were crucial to the success of the Manhattan Project, which developed the first atomic bombs during World War II. After Rudolf Peierls and Otto Frisch at the University of Birmingham calculated that a small sphere of pure uranium-235 could explode with the power of thousands of tons of dynamite, their memorandum led to Britain's own atomic bomb project. This project shared research with the US, but was eventually subsumed by the Manhattan Project under the 1943 Quebec Agreement. A British mission led by the Australian physicist Mark Oliphant assisted in the development of electromagnetic separation processes for enriching uranium; Wallace Akers led a similar mission assisting with gaseous diffusion. James Chadwick (pictured) was the head of a distinguished team of British scientists working on bomb design at the Los Alamos Laboratory that included Niels Bohr, Peierls, Frisch, Geoffrey Taylor, and James Tuck, as well as Klaus Fuchs, who was later revealed to be a Soviet atomic spy. American and British cooperation ended with the Atomic Energy Act of 1946. In October 1952, Britain became the third country to test an independently developed nuclear weapon.</p>
+            <p>British scientists were crucial to the success of the Manhattan Project, which developed the first atomic bombs during World War II. After Rudolf Peierls and Otto Frisch at the University of Birmingham calculated that a small sphere of pure uranium-235 could explode with the power of thousands of tons of dynamite, their memorandum led to Britain's own atomic bomb project. This project shared research with the US, but was eventually subsumed by the Manhattan Project under the 1943 Quebec Agreement. A British mission led by the Australian physicist Mark Oliphant assisted in the development of electromagnetic separation processes for enriching uranium; Wallace Akers led a similar mission assisting with gaseous diffusion. James Chadwick (pictured) was the head of a distinguished team of British scientists working on bomb design at the Los Alamos Laboratory that included Niels Bohr, Peierls, Frisch, Geoffrey Taylor, and James Tuck, as well as Klaus Fuchs, who was later revealed to be a Soviet atomic spy. American and British cooperation ended with the Atomic Energy Act of 1946. In October 1952, Britain became the third country to test an independently developed nuclear weapon.</p>
+      <div class="row-fluid">
+        <div class="span12"><h4>Did you know...</h4></div>
+
+            <p>British scientists were crucial to the success of the Manhattan Project, which developed the first atomic bombs during World War II. After Rudolf Peierls and Otto Frisch at the University of Birmingham calculated that a small sphere of pure uranium-235 could explode with the power of thousands of tons of dynamite, their memorandum led to Britain's own atomic bomb project. This project shared research with the US, but was eventually subsumed by the Manhattan Project under the 1943 Quebec Agreement. A British mission led by the Australian physicist Mark Oliphant assisted in the development of electromagnetic separation processes for enriching uranium; Wallace Akers led a similar mission assisting with gaseous diffusion. James Chadwick (pictured) was the head of a distinguished team of British scientists working on bomb design at the Los Alamos Laboratory that included Niels Bohr, Peierls, Frisch, Geoffrey Taylor, and James Tuck, as well as Klaus Fuchs, who was later revealed to be a Soviet atomic spy. American and British cooperation ended with the Atomic Energy Act of 1946. In October 1952, Britain became the third country to test an independently developed nuclear weapon.</p>
+
+          </div>
         </div>
 
+      <div class="span4">
+          <div class="span12"><h4>On this day...</h4></div>
 
-        <div class="span4">
-          <h4>On this day...</h4>
-          <p>British scientists were crucial to the success of the Manhattan Project, which developed the first atomic bombs during World War II. After Rudolf Peierls and Otto Frisch at the University of Birmingham calculated that a small sphere of pure uranium-235 could explode with the power of thousands of tons of dynamite, their memorandum led to Britain's own atomic bomb project. This project shared research with the US, but was eventually subsumed by the Manhattan Project under the 1943 Quebec Agreement. A British mission led by the Australian physicist Mark Oliphant assisted in the development of electromagnetic separation processes for enriching uranium; Wallace Akers led a similar mission assisting with gaseous diffusion. James Chadwick (pictured) was the head of a distinguished team of British scientists working on bomb design at the Los Alamos Laboratory that included Niels Bohr, Peierls, Frisch, Geoffrey Taylor, and James Tuck, as well as Klaus Fuchs, who was later revealed to be a Soviet atomic spy. American and British cooperation ended with the Atomic Energy Act of 1946. In October 1952, Britain became the third country to test an independently developed nuclear weapon.</p>
+            <p>British scientists were crucial to the success of the Manhattan Project, which developed the first atomic bombs during World War II. After Rudolf Peierls and Otto Frisch at the University of Birmingham calculated that a small sphere of pure uranium-235 could explode with the power of thousands of tons of dynamite, their memorandum led to Britain's own atomic bomb project. This project shared research with the US, but was eventually subsumed by the Manhattan Project under the 1943 Quebec Agreement. A British mission led by the Australian physicist Mark Oliphant assisted in the development of electromagnetic separation processes for enriching uranium; Wallace Akers led a similar mission assisting with gaseous diffusion. James Chadwick (pictured) was the head of a distinguished team of British scientists working on bomb design at the Los Alamos Laboratory that included Niels Bohr, Peierls, Frisch, Geoffrey Taylor, and James Tuck, as well as Klaus Fuchs, who was later revealed to be a Soviet atomic spy. American and British cooperation ended with the Atomic Energy Act of 1946. In October 1952, Britain became the third country to test an independently developed nuclear weapon.</p>
+        <div class="row-fluid">
+          <div class="span12"><h4>In the news..</h4></div>
+
+            <p>roject under the 1943 Quebec Agreement. A British mission led by the Australian physicist Mark Oliphant assisted in the development of electromagnetic separation processes for enriching uranium; Wallace Akers led a similar mission assisting with gaseous diffusion. James Chadwick (pictured) was the head of a distinguished team of British scientists working on bomb design at the Los Alamos Laboratory that included Niels Bohr, Peierls, Frisch, Geoffrey Taylor, and James Tuck, as well as Klaus Fuchs, who was later revealed to be a Soviet atomic spy. American and British co</p>
+
+          </div>
         </div>
       </div>
     </div>
